# DNS-From-Scratch

./: .gitignore  CMakeLists.txt  DNSrequests.py  README.md  configure  dnsloader.c  getConfig.c  reverseDNS.py  sample.resolv.conf  testDNS.c
